tests/my text test log data/cd CUsersDellDocumentslogic-evaluat.txt
cd "C:\Users\Dell\Documents\logic-evaluation-engine"
python main.py


["Root", ["SUB", "x", 42], ["Node", {"value": 3}, "MEM", "x"]]


["EEX", "x", "JAM"]

["Root", ["SUB", "x", 42], ["Node", {"value": 1}, "EEX", ["MEM", "x"]]]



Now, 

python main.py

Verify output like:

perl

ðŸ” Parsing: ['Root', ['SUB', 'x', 42], ['Node', {'value': 3}, 'MEM', 'x']]
Final state: State.ALIVE


ERROR LOG
PS C:\Users\Dell\Documents\logic-evaluation-engine> python main.py
Enter expression (e.g. ["EX", "x", "JAM"]): ["EEX", "x", "JAM"]
Final state: State.VAC
Trace:
EEX â†’ ["EEX(Var('x'), JAM())"]
Enter expression (e.g. ["EX", "x", "JAM"]): hawaii50extreme2
âŒ JSON parse or expression build failed: Expecting value: line 1 column 1 (char 0)
PS C:\Users\Dell\Documents\logic-evaluation-engine> python main.py
  File "C:\Users\Dell\Documents\logic-evaluation-engine\main.py", line 17
    expr_str = "[\"Root\", [\"SUB\", \"x\", 42], [\"Node\", {\"value\": 3}, \"MEM\", \"x\"]]"
    ^^^^^^^^
IndentationError: expected an indented block after 'if' statement on line 15
PS C:\Users\Dell\Documents\logic-evaluation-engine>


----

ERROR LOG
PS C:\Users\Dell\Documents\logic-evaluation-engine> python main.py
  File "C:\Users\Dell\Documents\logic-evaluation-engine\main.py", line 17
    expr_str = "[\"Root\", [\"SUB\", \"x\", 42], [\"Node\", {\"value\": 3}, \"MEM\", \"x\"]]"
    ^^^^^^^^
IndentationError: expected an indented block after 'if' statement on line 15
PS C:\Users\Dell\Documents\logic-evaluation-engine> python main.py
  File "C:\Users\Dell\Documents\logic-evaluation-engine\main.py", line 22
    else:
    ^^^^
SyntaxError: invalid syntax

